[package]
name = "short-game"
version = "0.1.0"
authors = ["aidan chelig <aidan.chelig@gmail.com>"]
edition = "2021"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = { version = "0.22.0" }
inline_tweak = "1.0.9"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
